--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -28,7 +28,7 @@ TEST_PROGS=testhdf5 lheap ohdr stab gheap hyperslab istore bittests dtypes      
            dsets cmpd_dset extend external links unlink big mtime fillval mount \
            flush1 flush2 enum gass_write gass_read gass_append set_extent       \
            srb_write srb_append srb_read ttsafe stream_test getname file_handle \
-           ntypes dangle filename
+           ntypes dangle filename reserved
 
 TIMINGS=testmeta
 
@@ -79,7 +79,8 @@ TEST_SRC=big.c bittests.c cmpd_dset.c dsets.c dtypes.c extend.c              \
          unlink.c enum.c ttsafe.c ttsafe_dcreate.c ttsafe_error.c            \
          ttsafe_cancel.c ttsafe_acreate.c gass_write.c gass_read.c           \
          gass_append.c srb_read.c srb_write.c srb_append.c stream_test.c     \
-         set_extent.c getname.c file_handle.c ntypes.c dangle.c filename.c
+         set_extent.c getname.c file_handle.c ntypes.c dangle.c filename.c   \
+         reserved.c
 
 TEST_OBJ=$(TEST_SRC:.c=.lo)
 
@@ -222,5 +223,8 @@ dangle: dangle.lo
 
 filename: filename.lo
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ filename.lo $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
+
+reserved: reserved.lo
+	@$(LT_LINK_EXE) $(CFLAGS) -o $@ reserved.lo $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
 
 @CONCLUDE@
