--- a/branches/hdf5_1_6/c++/src/Makefile.in
+++ b/branches/hdf5_1_6/c++/src/Makefile.in
@@ -46,7 +46,7 @@ PUB_HDR=H5Cpp.h H5AbstractDs.h H5AtomType.h H5Attribute.h H5Classes.h           
         H5DcreatProp.h H5DxferProp.h H5EnumType.h H5Exception.h H5FaccProp.h    \
         H5FcreatProp.h H5File.h H5FloatType.h H5Group.h H5IdComponent.h         \
         H5Include.h H5IntType.h H5Library.h H5Object.h H5PredType.h             \
-        H5PropList.h H5RefCounter.h H5StrType.h
+        H5PropList.h H5RefCounter.h H5StrType.h H5CppDoc.h
 PUB_PROGS=h5c++
 
 ARFLAGS=rs
