Purpose:     Bug fix
Description:
    Correct typo which was causing incorrect srcdir paths in generated
dependencies.

Platforms tested:
    FreeBSD 4.10 (sleipnir) w/parallel
    IRIX64 6.5 (modi4)
    h5committested

--- a/config/depend1.in
+++ b/config/depend1.in
@@ -51,7 +51,7 @@ $(srcdir)/Dependencies: .depend
 	        ;;								\
 	    esac;								\
 	  fi;									\
-	done;
+	done;                                                                   \
         $(PERL) -w $(top_srcdir)/bin/dependencies --top_srcdir=$(top_srcdir) --top_builddir=$(top_builddir) $@;
 
 -include .depend
