--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -47,7 +47,7 @@ PUB_LIB=
 ## prefix or low-level driver with environment variables will influence 
 ## the temporary file name in ways that the makefile is not aware of.
 MOSTLYCLEAN=cmpd_dset.h5 compact_dataset.h5 dataset.h5 extend.h5 istore.h5   \
-            tfile[1-3].h5 th5s1.h5 lheap.h5 ohdr.h5 stab[1-2].h5 \
+            tfile[1-3].h5 th5s1.h5 th5s3.h5 lheap.h5 ohdr.h5 stab[1-2].h5 \
             extern_[1-3].h5 extern_[1-4][ab].raw gheap[0-4].h5      \
             links.h5 links[1-3].h5 big.data big[0-9][0-9][0-9][0-9][0-9].h5  \
             dtypes[1-5].h5 tattr.h5          \
@@ -60,8 +60,8 @@ MOSTLYCLEAN=cmpd_dset.h5 compact_dataset.h5 dataset.h5 extend.h5 istore.h5   \
             tmisc13b.h5 tmisc14.h5 set_extent_read.h5 set_extent_create.h5   \
             getname.h5 getname1.h5 getname2.h5 getname3.h5 sec2_file.h5      \
             family_file000[0-3][0-9].h5 multi_file-[rs].h5 core_file         \
-            new_move_[ab].h5 ntypes.h5 dangle.h5 test_filters.h5 			 \
-			get_file_name.h5
+            new_move_[ab].h5 ntypes.h5 dangle.h5 test_filters.h5 	     \
+	    get_file_name.h5
 
 CLEAN=$(TIMINGS)
 
