Purpose:     Code cleanup
Description:
    Clean up some temporary files.

Platforms tested:
    FreeBSD 4.10 (sleipnir) w/C++
    Not tested by h5committest

--- a/c++/src/Makefile.in
+++ b/c++/src/Makefile.in
@@ -51,6 +51,7 @@ PUB_PROGS=h5c++
 ARFLAGS=rs
 
 ## h5c++ is generated during configure time.  Remove it only when distclean.
-DISTCLEAN=h5c++
+## libhdf5.settings is generated during configure. Remove it when distclean.
+DISTCLEAN=h5c++ libhdf5.settings
 
 @CONCLUDE@
