--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -2902,6 +2902,8 @@ AC_CONFIG_FILES([src/libhdf5.settings
                  tools/misc/Makefile
                  tools/misc/h5cc
                  tools/gifconv/Makefile
+                 tools/h5jam/Makefile
+                 tools/h5jam/testh5jam.sh
                  examples/Makefile
                  doc/Makefile
                  doc/html/Makefile
