--- a/trunk/tools/Makefile.in
+++ b/trunk/tools/Makefile.in
@@ -20,7 +20,7 @@ srcdir=@srcdir@
 
 ## All subdirectories except for the ``lib'' subdirectory.
 ##
-SUBDIRS=h5dump h5diff h5ls misc gifconv h5import h5repack
+SUBDIRS=h5dump h5diff h5ls misc gifconv h5import h5repack h5jam
 
 ## Add include directory to the C preprocessor flags, add -lh5tools and
 ## -lhdf5 to the list of libraries.
