--- a/branches/hdf5_1_6/configure.in
+++ b/branches/hdf5_1_6/configure.in
@@ -1501,23 +1501,24 @@ dnl If gettimeofday() is going to be used, make sure it uses the timezone struct
 
 if test "$have_gettime" = "yes" -a "$have_struct_tz" = "yes"; then
    AC_MSG_CHECKING(whether gettimeofday() gives timezone)
-   AC_TRY_RUN([
-      #include <time.h>
-      #include <sys/time.h>
-      int main(void)
-      {
-         struct timeval tv;
-         struct timezone tz;
-         tz.tz_minuteswest = 7777;  /* Initialize to an unreasonable number */
-         tz.tz_dsttime = 7;
-         gettimeofday(&tv, &tz);
-            /* Check whether the function returned any value at all */
-         if(tz.tz_minuteswest == 7777 && tz.tz_dsttime == 7)
-            exit(1);
-         else exit (0);
-      }], [hdf5_use_tz="yes"], [hdf5_use_tz="no"],)
+   AC_CACHE_VAL([hdf5_cv_gettimeofday_tz],
+       [AC_TRY_RUN([
+          #include <time.h>
+          #include <sys/time.h>
+          int main(void)
+          {
+             struct timeval tv;
+             struct timezone tz;
+             tz.tz_minuteswest = 7777;  /* Initialize to an unreasonable number */
+             tz.tz_dsttime = 7;
+             gettimeofday(&tv, &tz);
+                /* Check whether the function returned any value at all */
+             if(tz.tz_minuteswest == 7777 && tz.tz_dsttime == 7)
+                exit(1);
+             else exit (0);
+          }], [hdf5_cv_gettimeofday_tz=yes], [hdf5_cv_gettimeofday_tz=no],)])
 
-   if test "$hdf5_use_tz" = "yes"; then
+   if test ${hdf5_cv_gettimeofday_tz} = "yes"; then
       AC_MSG_RESULT([yes])
       AC_DEFINE([GETTIMEOFDAY_GIVES_TZ], [1],
                 [Define if gettimeofday() populates the tz pointer passed in])
