--- a/tools/h5repack/h5repack.sh.in
+++ b/tools/h5repack/h5repack.sh.in
@@ -127,6 +127,8 @@ TOOLTEST()
 # is read-only, 1 is write-only, and 0 is not present.
 
 # copy files (these files have no filters; test2.h5 has copied references that h5diff detects)
+TOOLTEST test0.h5
+TOOLTEST test1.h5
 TOOLTEST test3.h5
 TOOLTEST test4.h5
 TOOLTEST test5.h5
