--- a/branches/hdf5_1_6/configure.in
+++ b/branches/hdf5_1_6/configure.in
@@ -2454,6 +2454,7 @@ AC_CONFIG_FILES([src/libhdf5.settings
                  doc/html/Tutor/examples/Makefile
                  doc/html/cpplus/Makefile
                  doc/html/cpplus_RM/Makefile
+                 doc/html/cpplus_RM/header_files/Makefile
                  doc/html/fortran/Makefile])
 
 AC_OUTPUT
