--- a/trunk/test/Makefile.in
+++ b/trunk/test/Makefile.in
@@ -69,7 +69,7 @@ MOSTLYCLEAN=cmpd_dset.h5 compact_dataset.h5 dataset.h5 extend.h5 istore.h5   \
             getname.h5 getname[1-3].h5 sec2_file.h5                          \
             family_file000[0-3][0-9].h5 multi_file-[rs].h5 core_file         \
             new_move_[ab].h5 ntypes.h5 dangle.h5 error_test.h5 err_compat.h5 \
-            dtransform.h5 test_filters.h5 get_file_name.h5
+            dtransform.h5 test_filters.h5 get_file_name.h5 tstint[1-2].h5
 
 CLEAN=$(TIMINGS)
 
