Purpose:     Code cleanup
Description:
    Update FORTRAN configuration test code to be more syntacticly correct
and not generate errors with stricter standards checking in the compiler.

Platforms tested:
    Linux 2.4 (verbena)
    Too minor to require h5committest

--- a/configure.in
+++ b/configure.in
@@ -2211,18 +2211,22 @@ case "X-$enable_parallel" in
 
       dnl Try link a simple MPI program.  If fail, try again with -lmpi.
       AC_TRY_FLINK(mpif.h, [
+          integer:: ierr
           call mpi_file_open( ierr )],,
           AC_CHECK_FLIB(mpi, [
             include 'mpif.h'
+            integer:: ierr
             call mpi_file_open( ierr )],, PARALLEL=no))
 
       dnl Then try link a simple MPI-IO program.  If fail, try again with
       dnl -lmpio.
       if test "X$PARALLEL" = "Xyes"; then
         AC_TRY_FLINK(mpif.h, [
+            integer:: ierr
             call mpi_file_open( ierr )],,
             AC_CHECK_FLIB(mpio, [
               include 'mpif.h'
+              integer:: ierr
               call mpi_file_open( ierr )],, PARALLEL=no))
       fi
 
