Purpose:     Code cleanup & optimization
Description:
    Bring back new metadata cache code from development branch.

Platforms tested:
    FreeBSD 4.10 (sleipnir) w/parallel
    Solaris 2.7 (arabica)
    Linux 2.4 (heping) w/C++ & FORTRAN

--- a/branches/hdf5_1_6/configure.in
+++ b/branches/hdf5_1_6/configure.in
@@ -2433,6 +2433,7 @@ AC_CONFIG_FILES([src/libhdf5.settings
                  tools/h5import/Makefile
                  tools/h5diff/Makefile
                  tools/h5jam/Makefile
+                 tools/h5jam/testh5jam.sh
                  tools/h5repack/Makefile
                  tools/h5repack/h5repack.sh
                  tools/h5ls/Makefile
