Purpose: Added data transform example
Description:
Added example code for the data dtransform

Solution:
This code both illustrates how data transform works and shows how to use it.
Examples of data transform on read, write, and both at the same time.
Also shows usage of H5Pget_data_transform

Platforms tested:
eirene + copper

Misc. update:

--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -156,4 +156,13 @@ ph5example: $(srcdir)/ph5example.c
 	  $(H5CC_PP) $(CPPFLAGS) -o $@ $(srcdir)/$@.c;			\
 	fi
 
+h5_dtransform: $(srcdir)/h5_dtransform.c
+	@if test "X$(PARALLEL)" = "Xno"; then				\
+	  echo $(H5CC) $(CPPFLAGS) -o $@ $(srcdir)/$@.c;		\
+	  $(H5CC) $(CPPFLAGS) -o $@ $(srcdir)/$@.c;			\
+	else								\
+	  echo $(H5CC_PP) $(CPPFLAGS) -o $@ $(srcdir)/$@.c;		\
+	  $(H5CC_PP) $(CPPFLAGS) -o $@ $(srcdir)/$@.c;			\
+	fi
+
 @CONCLUDE@
