Purpose: Bug fix (#264)
Description:
h5dump did not print attribute data in ASCII format when
-r is used.

Solution:
Added the ability to print in ASCII for Attributes Data also.
Added a test for printing Attributes with -r option.

Platforms tested:
H5committested.
Also in heping.

Misc. update:
Update MANIFEST.

--- a/tools/h5dump/testh5dump.sh.in
+++ b/tools/h5dump/testh5dump.sh.in
@@ -198,6 +198,9 @@ TOOLTEST tlarge_objname.ddl -w157 tlarge_objname.h5
 # test '-A' to suppress data but print attr's
 TOOLTEST tall-2A.ddl -A tall.h5
 
+# test '-r' to print attributes in ASCII instead of decimal
+TOOLTEST tall-2B.ddl -A -r tall.h5
+
 # test Subsetting
 TOOLTEST tall-4s.ddl --dataset=/g1/g1.1/dset1.1.1 --start=1,1 --stride=2,3 --count=3,2 --block=1,1 tall.h5
 TOOLTEST tall-5s.ddl -d "/g1/g1.1/dset1.1.2[0;2;10;]" tall.h5
