Purpose: bug fix
Description:
one header file that was removed from the repo was not removed from the makefile.in,
causing make install to fail

Solution:
removed the file from the public header file list to be installed

Platforms tested:
linux

Misc. update:

--- a/hl/src/Makefile.in
+++ b/hl/src/Makefile.in
@@ -26,7 +26,7 @@ LIB_OBJ=$(LIB_SRC:.c=.lo)
 MOSTLYCLEAN=
 
 ## Public header files (to be installed)...
-PUB_HDR=H5IM.h H5LT.h H5TA.h H5HL.h
+PUB_HDR=H5IM.h H5LT.h H5TA.h 
 
 ## Other header files (not to be installed)...
 PRIVATE_HDR=
