Purpose: added hl to the 1.6 branch, as was done for the 1.7
Description:

Solution:

Platforms tested:
linux (using a build directory outside the source)

Misc. update:

--- a/branches/hdf5_1_6/hl/test/Makefile.in
+++ b/branches/hdf5_1_6/hl/test/Makefile.in
@@ -51,7 +51,7 @@ PRIVATE_HDR=
 
 ## How to build the tests...  They all depend on the hdf5_hl and hdf5
 ## libraries.
-$(TEST_PROGS): $(LIBHDF5_HL) $(LIBHDF5)
+$(TEST_PROGS): $(LIBHDF5_HL)
 
 test_lite: test_lite.lo
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ test_lite.lo $(LIBHDF5_HL) $(LIBHDF5) $(LDFLAGS) $(LIBS)
